orbit-bottom-spacing issue and alignment

--- a/src/components/seondCircle/SecondCircle.css
+++ b/src/components/seondCircle/SecondCircle.css
@@ -68,12 +68,11 @@
 
 .semi-circle-svg-img{
   position:absolute;
-  /* width: 700rem;
-  height: 50rem; */
-  /* bottom: 10rem; */
-  top: 2%;
+  width: 70rem;
+  height: 70rem;
   z-index: 0;
   opacity: 0;
+  bottom: 0%;
 }
 
 .green_circle> :first-child>:nth-child(1),
